--- a/kNN.tex
+++ b/kNN.tex
@@ -168,6 +168,7 @@ p(\delta_{\x})  \sim \begin{cases} \mathcal{N}(\mu_1,\sigma^2_1) &\text{for Yes}
 \mathcal{N}(\mu_2,\sigma^2_2)  &\text{for No}\end{cases}
 \]
 
+Thus for the $i^{th}$ testing instance
 
 \section{Na\"{i}ve Bayes based approach}
 
